<resources>
    <string name="app_name" translatable="false">AGDCarb</string>
    <string name="title_home" translatable="true">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_Bolus">Calc.Bolus</string>
    <string name="btn_BolusSet">Bolus Settings</string>
    <string name="txtGluco">Blood Glucose</string>
    <string name="txtEvent">Bolus Event</string>
    <string name="txtCarbo">CHO</string>
    <string name="edtGluco">Enter Blood Glucose...</string>
    <string name="edtEvent">Enter Event...</string>
    <string name="edtCarbo">Enter CHO...</string>
    <string name="btnEdit" translatable="false">...</string>
    <string name="btnCalcBol">Calculate</string>
    <string name="txtCalcBolus">Suggested bolus</string>
    <string name="txtBolusCHO">CHO bolus</string>
    <string name="txtBolusGluc">Glucose bolus</string>
    <string name="txtBolusTotal">Total bolus</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_Bolus_Ratio">Bolus Ratio</string>
    <string name="pref_Bolus_Descr">Ratio for Event</string>
    <string name="pref_Bolus_summary">CHO per insulin UI</string>

    <string name="numDigits" translatable="false">0123456789.,</string>

    <string-array name="pref_Events">
        <item>BreakFast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
        <item>Other1</item>
        <item>Other2</item>
        <item>Other3</item>
    </string-array>
    <string name="pref_Event_name">Event Name</string>
    <string name="pref_event_summary">Define the event name</string>

    <string name="pref_Event1_title">Bolus Event 1</string>
    <string name="pref_Event2_title">Bolus Event 2</string>
    <string name="pref_Event3_title">Bolus Event 3</string>
    <string name="pref_Event4_title">Bolus Event 4</string>
    <string name="pref_Event5_title">Bolus Event 5</string>
    <string name="pref_Event6_title">Bolus Event 6</string>
    <string name="pref_Event7_title">Bolus Event 7</string>

    <string name="pref_FSI_Rate">FSI Ratios</string>
    <string name="pref_FSI_Title">FSI Rate</string>
    <string name="pref_FSI_Summary">mg/Dl per insulin UI</string>
    <string name="pref_FSI_Over">Apply FSI over</string>
    <string name="pref_FSI_OverSummary">Apply FSI when Blood glucose is higher then those threshold</string>
    <string name="pref_FSI_Target">FSI target</string>
    <string name="pref_FSI_TargetSummary">mg/Dl target for FSI application</string>

    <string name="tbl_Suggested_UI">Sugg. UI</string>
    <string name="tbl_Estimated_Gluc">Est. mg/Dl</string>
    <string name="pref_InsPen">Insulin Pen</string>
    <string name="pref_InsPen_Title">Round to</string>
    <string name="pref_InsPen_Summary">Round the insulin pen bolus</string>
    <string name="Version" translatable="false">Version 1.0</string>

</resources>
