<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_FSI_Title" >
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="50.0"
            android:inputType="numberDecimal"
            android:key="FSI_Rate"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_FSI_Rate"
            android:summary="@string/pref_FSI_Summary"/>
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="180.0"
            android:inputType="numberDecimal"
            android:key="FSI_Over"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_FSI_Over"
            android:summary="@string/pref_FSI_OverSummary"/>
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="100.0"
            android:inputType="numberDecimal"
            android:key="FSI_Target"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_FSI_Target"
            android:summary="@string/pref_FSI_TargetSummary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_InsPen" >
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:key="Round_Pen"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_InsPen_Title"
            android:summary="@string/pref_InsPen_Summary"/>
    </PreferenceCategory>
</PreferenceScreen>
