<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="software.blackswork.agdcarb.BolusActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtCarbo"
        android:translationY="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCHO"
        android:layout_width="146dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:digits="@string/numDigits"
        android:ems="10"
        android:focusedByDefault="false"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/edtCarbo"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:fontFamily="sans-serif" />

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:enabled="false"
        android:text="@string/btnEdit"
        app:layout_constraintBottom_toBottomOf="@+id/txtCHO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCHO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtEvent"
        android:translationY="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/selEvent"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:prompt="@string/edtEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCHO" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtGluco"
        android:translationY="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/txtGluc"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:digits="@string/numDigits"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/edtGluco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selEvent" />


    <Button
        android:id="@+id/btnCalcBol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="Calculate"
        android:text="@string/btnCalcBol"
        android:focusedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGluc"
        tools:ignore="OnClick" />

    <TableLayout
        android:id="@+id/tblResult"
        android:layout_width="368dp"
        android:layout_height="150dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcBol">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/txtEmpty"
                android:layout_width="81dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtCalcBolus"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/txtCalcBolus"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBolusCHO"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="258dp" />

            <EditText
                android:id="@+id/txtCalcCHO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtCHORate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBolusGluc"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="284dp" />

            <EditText
                android:id="@+id/txtCalcGluco"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtGlucRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="..."
                android:textSize="10sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBolusTotal"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="302dp" />

            <EditText
                android:id="@+id/txtCalcTotal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="U.I." />

        </TableRow>
    </TableLayout>


    <TableLayout
        android:id="@+id/tblSugUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:background="@color/table_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tblResult">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTableRow1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tbl_Suggested_UI"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="141dp"
                tools:layout_editor_absoluteY="419dp" />

            <TextView
                android:id="@+id/txtR1C1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/colorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtR1C2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/colorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtR1C3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/colorSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtR1C4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="@color/colorSecondary"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtTableRow2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tbl_Estimated_Gluc"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtR2C1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/txtR2C2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/txtR2C3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="" />

            <TextView
                android:id="@+id/txtR2C4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>